--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
-<body>
-Test
-</body>
+<!DOCTYPE html>
+<html lang='ru'><!-- Noncompliant -->
+    <head>
+        <title>Index static page</title>
+        <meta content="text/html; charset=utf-8" />
+    </head> 
+    <body>
+        <p>Эта страница статическая и не интересная.</p>
+    </body>
 </html>
