--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head> 
     <body>
         <p>Эта страница статическая и не интересная.</p>
+        <p>Лучше пойдем посмотрим на динамически генерируемые <a href=/>страницы</a>.</p>
     </body>
 </html>
